welcome.lessons.welcome.loopdowhile.Poucet.scala.error
Poucet:11: error: illegal start of simple expression
	}
        ^Poucet:12: error: 'while' expected but 'if' found.
	if (nb<3) {
        ^Poucet:18: error: '(' expected but '}' found.
}
^